add change to html and sass

--- a/src/sass/blocks/_features.sass
+++ b/src/sass/blocks/_features.sass
@@ -1,5 +1,5 @@
 .features
-    &_wrapper
+    &__wrapper
         display: flex
         justify-content: space-between
         align-items: center
@@ -19,7 +19,9 @@
                 font-size: 1.2rem
                 color: #3A3A3A
                 line-height: 0.3rem
+                display: block
             p
                 font-weight: 500
                 font-size: 1rem
                 color: #898989
+                display: block
