--- a/src/sass/blocks/_inspiration.sass
+++ b/src/sass/blocks/_inspiration.sass
@@ -19,7 +19,8 @@
         margin-top: 35px
         cursor: pointer
         &:hover
-            background-color: #e18e5b
+            background-color: #df8751
+            transition: 0.2s ease-in-out
     &_slider
         height: 580px
         margin-top: 45px
@@ -33,7 +34,7 @@
         .s1
             transform: translateX(-260px)
             // transition: 1s ease-in-out
-    &_info-box
+    &_info
         // position: relative
         width: 180px
         height: 70px
