--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,6 +6,7 @@
 @import 'blocks/tips'
 @import 'blocks/share'
 @import 'blocks/footer'
+@import 'blocks/header'
 
 body
     font-family: 'Poppins', sans-serif
