--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,25 +1,16 @@
-.promo { padding-top: 2.5rem; height: auto; background: url(../img/promo-bg.jpg) center center/cover no-repeat; }
-.promo_header { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
-.promo_header_logo { font-weight: 700; font-size: 1.5rem; width: 5%; }
-.promo_header_menu { width: 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; vertical-align: center; }
-.promo_header_menu a { font-size: 1rem; color: #3A3A3A; text-decoration: none; margin-right: 0.3rem; display: -webkit-box; display: -ms-flexbox; display: flex; }
-.promo_header_menu a img { margin-left: 0.5rem; }
-.promo_header_searchbar { width: 40%; }
-.promo_header_searchbar form .search { height: 2.3rem; width: 90%; font-size: 1rem; padding-left: 2.5rem; padding: auto; border: none; }
-.promo_header_icons { width: 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.promo_header_icons img { width: 1.5rem; height: 1.5rem; }
+.promo { padding-top: 0.5rem; height: auto; background: url(../img/promo-bg.jpg) center center/cover no-repeat; }
 .promo_offer { position: absolute; margin-top: 100px; z-index: 2; width: 360px; height: 430px; padding: 50px 50px 50px 50px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(10px); backdrop-filter: blur(10px); }
 .promo_offer_header { font-weight: 800; font-size: 2.8rem; color: #3A3A3A; line-height: 4rem; margin: 0; }
 .promo_offer_descr { font-weight: 500; font-size: 1.2rem; color: #898989; margin-top: 1rem; }
-.promo_offer_button { width: 360px; height: 78px; background-color: #E89F71; border: none; font-weight: 600; font-size: 1.3rem; color: #FFFFFF; margin-top: 50px; cursor: pointer; }
-.promo_offer_button:hover { background-color: #e18e5b; }
+.promo_offer_button { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 360px; height: 78px; background-color: #E89F71; border: none; font-weight: 600; font-size: 1.3rem; color: #FFFFFF; margin-top: 50px; text-decoration: none; cursor: pointer; }
+.promo_offer_button:hover { background-color: #df8751; -webkit-transition: 0.2s ease-in-out; transition: 0.2s ease-in-out; }
 .promo_slider { height: 550px; }
-.promo_info-box { position: relative; width: 270px; height: 125px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(15px); backdrop-filter: blur(15px); z-index: 2; padding: 10px 0 10px 24px; right: -67%; -webkit-transform: translateY(-130%); transform: translateY(-130%); }
-.promo_info-box-name { font-weight: 600; font-size: 1.7rem; color: #3A3A3A; line-height: 0.5rem; }
-.promo_info-box-descr { font-weight: 500; font-size: 1rem; color: #616161; line-height: 0.5rem; }
-.promo_info-box-prise { font-weight: 700; font-size: 1.3rem; }
-.promo_info-box-prise-arrow { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 1.3rem; }
-.promo_info-box-arrow { width: 20%; }
+.promo_info { position: relative; width: 270px; height: 125px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(15px); backdrop-filter: blur(15px); z-index: 2; padding: 10px 0 10px 24px; right: -67%; -webkit-transform: translateY(-130%); transform: translateY(-130%); }
+.promo_info-name { font-weight: 600; font-size: 1.7rem; color: #3A3A3A; line-height: 0.5rem; }
+.promo_info-descr { font-weight: 500; font-size: 1rem; color: #616161; line-height: 0.5rem; }
+.promo_info-prise { font-weight: 700; font-size: 1.3rem; }
+.promo_info-prise-arrow { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 1.3rem; }
+.promo_info-arrow { width: 20%; }
 .promo_carousel { position: relative; width: 100%; margin: 0 auto; margin-top: 180px; }
 .promo_carousel_slide { height: 550px; width: 930px; margin: 0 auto; }
 .promo .s1 { -webkit-transform: translateX(160px); transform: translateX(160px); }
@@ -38,23 +29,23 @@
 
 .slick-active button { background-color: #E89F71; }
 
-.features_wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 5.6rem; }
+.features__wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 5.6rem; }
 .features_block { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 .features_block_img { width: 5.3rem; height: 5.3rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.features_block_text h3 { font-weight: 600; font-size: 1.2rem; color: #3A3A3A; line-height: 0.3rem; }
-.features_block_text p { font-weight: 500; font-size: 1rem; color: #898989; }
+.features_block_text h3 { font-weight: 600; font-size: 1.2rem; color: #3A3A3A; line-height: 0.3rem; display: block; }
+.features_block_text p { font-weight: 500; font-size: 1rem; color: #898989; display: block; }
 
-.products_content { -ms-flex-wrap: wrap; flex-wrap: wrap; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
-.products_content_item { margin-top: 1.8rem; background: #F4F5F7; position: relative; }
-.products_content_item:hover .overlay { display: block; }
-.products_content_item_descr { padding: 16px 30px 30px 16px; }
-.products_content_item_descr_name { font-weight: 600; font-size: 1.5rem; color: #3A3A3A; margin-top: 1rem; margin-bottom: 0; }
-.products_content_item_descr_text { font-weight: 500; font-size: 1rem; color: #898989; margin-top: 0.5rem; }
-.products_content_item_descr_price { margin-top: 0.5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.products_content_item_descr_price_new { font-weight: 600; font-size: 1.2rem; color: #3A3A3A; }
-.products_content_item_descr_price_old { font-weight: 400; font-size: 0.9rem; color: #B0B0B0; }
+.products_wrapper { -ms-flex-wrap: wrap; flex-wrap: wrap; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
+.products_item { margin-top: 1.8rem; background: #F4F5F7; position: relative; }
+.products_item:hover .overlay { display: block; }
+.products_descr { padding: 16px 30px 30px 16px; }
+.products_name { font-weight: 600; font-size: 1.5rem; color: #3A3A3A; margin-top: 1rem; margin-bottom: 0; }
+.products_text { font-weight: 500; font-size: 1rem; color: #898989; margin-top: 0.5rem; }
+.products_price { margin-top: 0.5rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.products_price-new { font-weight: 600; font-size: 1.2rem; color: #3A3A3A; }
+.products_price-old { font-weight: 400; font-size: 0.9rem; color: #B0B0B0; }
 .products_more { width: 245px; height: 48px; color: #E89F71; background-color: #fff; border: 1px solid #E89F71; display: block; margin: 0 auto; margin-top: 1.8rem; cursor: pointer; }
-.products_more:hover { background-color: #E89F71; color: #fff; }
+.products_more:hover { background-color: #E89F71; color: #fff; -webkit-transition: 0.2s ease-in-out; transition: 0.2s ease-in-out; }
 
 .title { text-align: center; font-weight: 700; font-size: 2.5rem; color: #3A3A3A; margin-top: 70px; }
 
@@ -65,7 +56,7 @@
 
 .modal_wrapper { display: block; margin: 0 auto; margin-top: 75%; }
 .modal_wrapper .add-to-cart { width: 202px; height: 48px; background-color: #fff; border: none; color: #E89F71; font-weight: 600; font-size: 1rem; display: block; margin: 0 auto; cursor: pointer; }
-.modal_wrapper .add-to-cart:hover { background-color: #E89F71; color: #fff; }
+.modal_wrapper .add-to-cart:hover { background-color: #E89F71; -webkit-transition: 0.2s ease-in-out; transition: 0.2s ease-in-out; color: #fff; }
 .modal_wrapper .link { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-pack: distribute; justify-content: space-around; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 202px; margin: 0 auto; margin-top: 1.2rem; }
 .modal_wrapper .link a { font-weight: 600; font-size: 1rem; color: #fff; text-decoration: none; -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; align-items: center; }
 .modal_wrapper .link a img { margin-right: 0.6rem; }
@@ -73,15 +64,15 @@
 .inspiration { background-color: #FCF8F3; }
 .inspiration_block { display: inline-block; position: relative; width: 380px; height: 275px; margin-left: 0; right: -15%; -webkit-transform: translateY(-170%); transform: translateY(-170%); }
 .inspiration_more { width: 176px; height: 48px; background-color: #E89F71; color: #fff; font-weight: 600; font-size: 1rem; border: none; margin-top: 35px; cursor: pointer; }
-.inspiration_more:hover { background-color: #e18e5b; }
+.inspiration_more:hover { background-color: #df8751; -webkit-transition: 0.2s ease-in-out; transition: 0.2s ease-in-out; }
 .inspiration_slider { height: 580px; margin-top: 45px; }
 .inspiration_carousel { margin-left: 40%; width: 55%; position: relative; }
 .inspiration_carousel_slide { width: 370px; height: auto; }
 .inspiration_carousel .s1 { -webkit-transform: translateX(-260px); transform: translateX(-260px); }
-.inspiration_info-box { width: 180px; height: 70px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(15px); backdrop-filter: blur(15px); padding: 32px 32px 32px 32px; }
-.inspiration_info-box-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; z-index: 2; right: -43%; -webkit-transform: translateY(-360%); transform: translateY(-360%); -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; width: 300px; }
-.inspiration_info-box-name { font-weight: 600; font-size: 1.7rem; color: #3A3A3A; line-height: 0.5rem; }
-.inspiration_info-box-descr { font-weight: 500; font-size: 1rem; color: #616161; line-height: 0.5rem; }
+.inspiration_info { width: 180px; height: 70px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(15px); backdrop-filter: blur(15px); padding: 32px 32px 32px 32px; }
+.inspiration_info-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; z-index: 2; right: -43%; -webkit-transform: translateY(-360%); transform: translateY(-360%); -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; width: 300px; }
+.inspiration_info-name { font-weight: 600; font-size: 1.7rem; color: #3A3A3A; line-height: 0.5rem; }
+.inspiration_info-descr { font-weight: 500; font-size: 1rem; color: #616161; line-height: 0.5rem; }
 .inspiration .slick-slide { padding: 0 10px 0 10px; }
 .inspiration .slick-next, .inspiration .slick-prev { position: absolute; width: 50px; bottom: -25%; -webkit-transform: translateX(1450%); transform: translateX(1450%); border: none; background: none; cursor: pointer; }
 .inspiration .slick-next img, .inspiration .slick-prev img { width: 48px; height: 48px; }
@@ -131,8 +122,18 @@
 .footer_email button { background: none; border: none; cursor: pointer; }
 .footer_email button:hover { opacity: 0.8; }
 
+.header { padding-top: 2.5rem; background: url(../img/promo-bg.jpg) center center/cover no-repeat; }
+.header .container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
+.header_logo { font-weight: 700; font-size: 1.5rem; width: 5%; }
+.header_menu { width: 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; vertical-align: center; }
+.header_menu a { font-size: 1rem; color: #3A3A3A; text-decoration: none; margin-right: 0.3rem; display: -webkit-box; display: -ms-flexbox; display: flex; }
+.header_menu a img { margin-left: 0.5rem; }
+.header_searchbar { width: 40%; }
+.header_searchbar form .search { height: 2.3rem; width: 90%; font-size: 1rem; padding-left: 2.5rem; padding: auto; border: none; }
+.header_icons { width: 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.header_icons img { width: 1.5rem; height: 1.5rem; }
+
 body { font-family: "Poppins", sans-serif; }
 
 .container { width: 1240px; margin: auto; }
-
 /*# sourceMappingURL=style.css.map */
