--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -1,46 +1,7 @@
 .promo
-    padding-top: 2.5rem
+    padding-top: 0.5rem
     height: auto
     background: url(../img/promo-bg.jpg) center center/cover no-repeat
-    &_header
-        display: flex
-        justify-content: space-between
-        &_logo
-            font-weight: 700
-            font-size: 1.5rem
-            width: 5%
-        &_menu
-            width: 25%
-            display: flex
-            justify-content: space-between
-            align-items: center
-            vertical-align: center
-            a
-                font-size: 1rem
-                color: #3A3A3A
-                text-decoration: none
-                margin-right: 0.3rem
-                display: flex
-                img
-                    margin-left: 0.5rem
-        &_searchbar
-            width: 40%
-            form
-                .search
-                    height: 2.3rem
-                    width: 90%
-                    font-size: 1rem
-                    padding-left: 2.5rem
-                    padding: auto
-                    border: none
-        &_icons
-            width: 10%
-            display: flex
-            justify-content: space-between
-            align-items: center
-            img
-                width: 1.5rem
-                height: 1.5rem
     &_offer
         position: absolute
         margin-top: 100px
@@ -62,6 +23,9 @@
             color: #898989
             margin-top: 1rem
         &_button
+            display: flex
+            justify-content: center
+            align-items: center
             width: 360px
             height: 78px
             background-color: $main-color
@@ -70,12 +34,14 @@
             font-size: 1.3rem
             color: #FFFFFF
             margin-top: 50px
+            text-decoration: none
             cursor: pointer
             &:hover
-                background-color: #e18e5b
+                background-color: #df8751
+                transition: 0.2s ease-in-out
     &_slider
         height: 550px
-    &_info-box
+    &_info
         position: relative
         width: 270px
         height: 125px
