add change to html

--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,6 +1,6 @@
 .header
     padding-top: 2.5rem
-    background: url(../img/promo-bg.jpg) center center/cover no-repeat
+    background: url(../img/promo/bg.jpg) center center/cover no-repeat
     .container
         display: flex
         justify-content: space-between
