--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -1,7 +1,7 @@
 .promo
     padding-top: 0.5rem
     height: auto
-    background: url(../img/promo-bg.jpg) center center/cover no-repeat
+    background: url(../img/promo/bg.jpg) center center/cover no-repeat
     &_offer
         position: absolute
         margin-top: 100px
