--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-.promo { padding-top: 0.5rem; height: auto; background: url(../img/promo-bg.jpg) center center/cover no-repeat; }
+.promo { padding-top: 0.5rem; height: auto; background: url(../img/promo/bg.jpg) center center/cover no-repeat; }
 .promo_offer { position: absolute; margin-top: 100px; z-index: 2; width: 360px; height: 430px; padding: 50px 50px 50px 50px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(10px); backdrop-filter: blur(10px); }
 .promo_offer_header { font-weight: 800; font-size: 2.8rem; color: #3A3A3A; line-height: 4rem; margin: 0; }
 .promo_offer_descr { font-weight: 500; font-size: 1.2rem; color: #898989; margin-top: 1rem; }
@@ -122,7 +122,7 @@
 .footer_email button { background: none; border: none; cursor: pointer; }
 .footer_email button:hover { opacity: 0.8; }
 
-.header { padding-top: 2.5rem; background: url(../img/promo-bg.jpg) center center/cover no-repeat; }
+.header { padding-top: 2.5rem; background: url(../img/promo/bg.jpg) center center/cover no-repeat; }
 .header .container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 .header_logo { font-weight: 700; font-size: 1.5rem; width: 5%; }
 .header_menu { width: 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; vertical-align: center; }
@@ -136,4 +136,5 @@
 body { font-family: "Poppins", sans-serif; }
 
 .container { width: 1240px; margin: auto; }
+
 /*# sourceMappingURL=style.css.map */
