change html structure

--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -12,43 +12,46 @@
             display: block
             &:hover
                 color: $main-color
-    &_item
+    &-item
         margin: 0 35px
-    &_title
+    &-title
         margin-top: 80px
         font-weight: 700
         font-size: 1.5rem
         color: #000
         width: 100%
-    &_about
+    &-about
         display: block
         width: 100%
         height: auto
         a
             img
                 margin-right: 1rem
-    &_descr
+    &-descr
         width: 266px
         font-weight: 400
         font-size: 16px
         color: #616161
-    &_menu
-        &_links
+    &-menu
+        a
             width: 116px
-    &_social-media
-        .footer_title
+    &-social-media
+        .footer-title
             width: 196px
-    &_email
+    &-email
         form
             display: flex
         input
-            width: 215px
+            width: 210px
             background: #F4F5F7
             border: none
-            padding-left: 1rem
+            padding-left: 0.5rem
         button
             background: none
             border: none
             cursor: pointer
             &:hover
                 opacity: 0.8
+    ul
+        list-style-type: none
+        margin-left: -35px
