--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,6 +1,7 @@
 .header
     padding-top: 2.5rem
     background: url(../img/promo/bg.jpg) center center/cover no-repeat
+    align-items: center
     .container
         display: flex
         justify-content: space-between
@@ -8,23 +9,28 @@
         font-weight: 700
         font-size: 1.5rem
         width: 5%
+        text-decoration: none
+        color: #333
+        align-items: center
+        display: flex
     &_menu
         width: 25%
         display: flex
         justify-content: space-between
         align-items: center
         vertical-align: center
+        list-style-type: none
         a
             font-size: 1rem
             color: #3A3A3A
             text-decoration: none
             margin-right: 0.3rem
-            display: flex
-            img
-                margin-left: 0.5rem
     &_searchbar
         width: 40%
+        display: flex
+        align-items: center
         form
+            width: 100%
             .search
                 height: 2.3rem
                 width: 90%
@@ -40,3 +46,10 @@
         img
             width: 1.5rem
             height: 1.5rem
+.menu-item
+    display: flex
+    img
+        display: none
+    &:hover
+        .menu-icon
+            display: block
