--- a/src/sass/blocks/_tips.sass
+++ b/src/sass/blocks/_tips.sass
@@ -4,19 +4,19 @@
         width: 100%
         position: relative
         margin-bottom: 4rem
-        &_slide
-            width: 390px
-            height: 250px
-        &_title
-            display: block
-            background-color: #fff
-            padding: 1px 0 0 0
-            h3
-                margin-left: 0.8rem
-                font-weight: 600
-                font-size: 1.3rem
-                color: $text-color
-                line-height: 28px
+    &-slide
+        width: 390px
+        height: 250px
+    &-title
+        display: block
+        background-color: #fff
+        padding: 1px 0 0 0
+        h3
+            margin-left: 0.8rem
+            font-weight: 600
+            font-size: 1.3rem
+            color: $text-color
+            line-height: 28px
             span
                 font-weight: 400
                 font-size: 14px
