--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,18 +1,18 @@
 .promo { padding-top: 0.5rem; height: auto; background: url(../img/promo/bg.jpg) center center/cover no-repeat; }
 .promo_offer { position: absolute; margin-top: 100px; z-index: 2; width: 360px; height: 430px; padding: 50px 50px 50px 50px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(10px); backdrop-filter: blur(10px); }
-.promo_offer_header { font-weight: 800; font-size: 2.8rem; color: #3A3A3A; line-height: 4rem; margin: 0; }
-.promo_offer_descr { font-weight: 500; font-size: 1.2rem; color: #898989; margin-top: 1rem; }
-.promo_offer_button { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 360px; height: 78px; background-color: #E89F71; border: none; font-weight: 600; font-size: 1.3rem; color: #FFFFFF; margin-top: 50px; text-decoration: none; cursor: pointer; }
-.promo_offer_button:hover { background-color: #df8751; -webkit-transition: 0.2s ease-in-out; transition: 0.2s ease-in-out; }
+.promo-header { font-weight: 800; font-size: 2.8rem; color: #3A3A3A; line-height: 4rem; margin: 0; }
+.promo-descr { font-weight: 500; font-size: 1.2rem; color: #898989; margin-top: 1rem; }
+.promo-button { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 360px; height: 78px; background-color: #E89F71; border: none; font-weight: 600; font-size: 1.3rem; color: #FFFFFF; margin-top: 50px; text-decoration: none; cursor: pointer; }
+.promo-button:hover { background-color: #df8751; -webkit-transition: 0.2s ease-in-out; transition: 0.2s ease-in-out; }
 .promo_slider { height: 550px; }
 .promo_info { position: relative; width: 270px; height: 125px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(15px); backdrop-filter: blur(15px); z-index: 2; padding: 10px 0 10px 24px; right: -67%; -webkit-transform: translateY(-130%); transform: translateY(-130%); }
-.promo_info-name { font-weight: 600; font-size: 1.7rem; color: #3A3A3A; line-height: 0.5rem; }
-.promo_info-descr { font-weight: 500; font-size: 1rem; color: #616161; line-height: 0.5rem; }
-.promo_info-prise { font-weight: 700; font-size: 1.3rem; }
-.promo_info-prise-arrow { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 1.3rem; }
-.promo_info-arrow { width: 20%; }
+.promo .info-name { font-weight: 600; font-size: 1.7rem; color: #3A3A3A; line-height: 0.5rem; }
+.promo .info-descr { font-weight: 500; font-size: 1rem; color: #616161; line-height: 0.5rem; }
+.promo .info-prise { font-weight: 700; font-size: 1.3rem; }
+.promo .info-prise-arrow { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 1.3rem; }
+.promo .info-arrow { width: 20%; }
 .promo_carousel { position: relative; width: 100%; margin: 0 auto; margin-top: 180px; }
-.promo_carousel_slide { height: 550px; width: 930px; margin: 0 auto; }
+.promo-slide { height: 550px; width: 930px; margin: 0 auto; }
 .promo .s1 { -webkit-transform: translateX(160px); transform: translateX(160px); }
 
 .slick-slide { padding: 0 20px 0 20px; }
@@ -31,9 +31,9 @@
 
 .features__wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; margin-top: 5.6rem; }
 .features_block { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.features_block_img { width: 5.3rem; height: 5.3rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.features_block_text h3 { font-weight: 600; font-size: 1.2rem; color: #3A3A3A; line-height: 0.3rem; display: block; }
-.features_block_text p { font-weight: 500; font-size: 1rem; color: #898989; display: block; }
+.features_block-img { width: 5.3rem; height: 5.3rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.features_block-text h3 { font-weight: 600; font-size: 1.2rem; color: #3A3A3A; line-height: 0.3rem; display: block; }
+.features_block-text p { font-weight: 500; font-size: 1rem; color: #898989; display: block; }
 
 .products_wrapper { -ms-flex-wrap: wrap; flex-wrap: wrap; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 .products_item { margin-top: 1.8rem; background: #F4F5F7; position: relative; }
@@ -63,30 +63,30 @@
 
 .inspiration { background-color: #FCF8F3; }
 .inspiration_block { display: inline-block; position: relative; width: 380px; height: 275px; margin-left: 0; right: -15%; -webkit-transform: translateY(-170%); transform: translateY(-170%); }
-.inspiration_more { width: 176px; height: 48px; background-color: #E89F71; color: #fff; font-weight: 600; font-size: 1rem; border: none; margin-top: 35px; cursor: pointer; }
-.inspiration_more:hover { background-color: #df8751; -webkit-transition: 0.2s ease-in-out; transition: 0.2s ease-in-out; }
+.inspiration-more { width: 176px; height: 48px; background-color: #E89F71; color: #fff; font-weight: 600; font-size: 1rem; border: none; margin-top: 35px; cursor: pointer; }
+.inspiration-more:hover { background-color: #df8751; -webkit-transition: 0.2s ease-in-out; transition: 0.2s ease-in-out; }
 .inspiration_slider { height: 580px; margin-top: 45px; }
 .inspiration_carousel { margin-left: 40%; width: 55%; position: relative; }
-.inspiration_carousel_slide { width: 370px; height: auto; }
-.inspiration_carousel .s1 { -webkit-transform: translateX(-260px); transform: translateX(-260px); }
-.inspiration_info { width: 180px; height: 70px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(15px); backdrop-filter: blur(15px); padding: 32px 32px 32px 32px; }
-.inspiration_info-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; z-index: 2; right: -43%; -webkit-transform: translateY(-360%); transform: translateY(-360%); -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; width: 300px; }
-.inspiration_info-name { font-weight: 600; font-size: 1.7rem; color: #3A3A3A; line-height: 0.5rem; }
-.inspiration_info-descr { font-weight: 500; font-size: 1rem; color: #616161; line-height: 0.5rem; }
+.inspiration-slide { width: 370px; height: auto; }
+.inspiration .s1 { -webkit-transform: translateX(-260px); transform: translateX(-260px); }
+.inspiration-info { width: 180px; height: 70px; background: rgba(255, 255, 255, 0.72); -webkit-backdrop-filter: blur(15px); backdrop-filter: blur(15px); padding: 32px 32px 32px 32px; }
+.inspiration .info-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; z-index: 2; right: -43%; -webkit-transform: translateY(-390%); transform: translateY(-390%); -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; width: 300px; }
+.inspiration .info-name { font-weight: 600; font-size: 1.7rem; color: #3A3A3A; line-height: 0.5rem; }
+.inspiration .info-descr { font-weight: 500; font-size: 1rem; color: #616161; line-height: 0.5rem; }
 .inspiration .slick-slide { padding: 0 10px 0 10px; }
 .inspiration .slick-next, .inspiration .slick-prev { position: absolute; width: 50px; bottom: -25%; -webkit-transform: translateX(1450%); transform: translateX(1450%); border: none; background: none; cursor: pointer; }
 .inspiration .slick-next img, .inspiration .slick-prev img { width: 48px; height: 48px; }
-.inspiration .slick-dots { -webkit-transform: translateX(230%); transform: translateX(230%); top: 90%; }
+.inspiration .slick-dots { -webkit-transform: translateX(230%); transform: translateX(230%); top: 97%; }
 
-.title_left { margin-left: 0; text-align: left; margin-bottom: 0; }
+.inspiration-title { margin-left: 0; text-align: left; margin-bottom: 0; }
 
 .subtitle { font-weight: 500; font-size: 1rem; color: #616161; margin-top: 0.5rem; }
 
 .tips_carousel { width: 100%; position: relative; margin-bottom: 4rem; }
-.tips_carousel_slide { width: 390px; height: 250px; }
-.tips_carousel_title { display: block; background-color: #fff; padding: 1px 0 0 0; }
-.tips_carousel_title h3 { margin-left: 0.8rem; font-weight: 600; font-size: 1.3rem; color: #3A3A3A; line-height: 28px; }
-.tips_carousel_title span { font-weight: 400; font-size: 14px; color: #898989; }
+.tips-slide { width: 390px; height: 250px; }
+.tips-title { display: block; background-color: #fff; padding: 1px 0 0 0; }
+.tips-title h3 { margin-left: 0.8rem; font-weight: 600; font-size: 1.3rem; color: #3A3A3A; line-height: 28px; }
+.tips-title h3 span { font-weight: 400; font-size: 14px; color: #898989; }
 .tips .s1:hover { -webkit-box-shadow: 10px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.22); box-shadow: 10px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.22); }
 .tips .slick-dots { -webkit-transform: translateX(320%); transform: translateX(320%); top: 100%; }
 
@@ -94,44 +94,49 @@
 .share .subtitle { text-align: center; margin-top: 100px; }
 .share .title { margin: 0 auto; }
 .share_wrapper { display: grid; grid-template-columns: 45% 20% 35%; grid-template-rows: 420px 420px; }
-.share_box { margin: 10px; display: -webkit-box; display: -ms-flexbox; display: flex; }
-.share_box_2 { grid-row-start: span 2; display: grid; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.share_box_2 img { width: 100%; height: auto; }
-.share_img_1 { width: 30%; height: 100%; }
-.share_img_2 { width: 67%; height: 90%; margin-left: 3%; margin-top: 5%; }
-.share_img_9 { width: 40%; }
-.share_img_5 { width: 65%; margin-right: 3%; }
-.share_img_6 { height: 80%; width: 32%; }
-.share_img_8 { width: 60%; height: 70%; }
-.share_img_7 { width: 37%; height: 90%; margin-right: 3%; }
-.share_img_4 { width: 57%; height: 70%; margin-top: 21%; margin-right: 3%; }
+.share-box { margin: 10px; display: -webkit-box; display: -ms-flexbox; display: flex; }
+.share-box-2 { grid-row-start: span 2; display: grid; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.share-box-2 img { width: 100%; height: auto; }
+.share-img-1 { width: 30%; height: 100%; }
+.share-img-2 { width: 67%; height: 90%; margin-left: 3%; margin-top: 5%; }
+.share-img-9 { width: 40%; }
+.share-img-5 { width: 65%; margin-right: 3%; }
+.share-img-6 { height: 80%; width: 32%; }
+.share-img-8 { width: 60%; height: 70%; }
+.share-img-7 { width: 37%; height: 90%; margin-right: 3%; }
+.share-img-4 { width: 57%; height: 70%; margin-top: 21%; margin-right: 3%; }
 
 .footer { padding-bottom: 60px; }
 .footer_wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; width: 100%; margin: 0 -35px; }
 .footer_wrapper a { font-size: 16px; color: #616161; text-decoration: none; margin-top: 1rem; display: block; }
 .footer_wrapper a:hover { color: #E89F71; }
-.footer_item { margin: 0 35px; }
-.footer_title { margin-top: 80px; font-weight: 700; font-size: 1.5rem; color: #000; width: 100%; }
-.footer_about { display: block; width: 100%; height: auto; }
-.footer_about a img { margin-right: 1rem; }
-.footer_descr { width: 266px; font-weight: 400; font-size: 16px; color: #616161; }
-.footer_menu_links { width: 116px; }
-.footer_social-media .footer_title { width: 196px; }
-.footer_email form { display: -webkit-box; display: -ms-flexbox; display: flex; }
-.footer_email input { width: 215px; background: #F4F5F7; border: none; padding-left: 1rem; }
-.footer_email button { background: none; border: none; cursor: pointer; }
-.footer_email button:hover { opacity: 0.8; }
+.footer-item { margin: 0 35px; }
+.footer-title { margin-top: 80px; font-weight: 700; font-size: 1.5rem; color: #000; width: 100%; }
+.footer-about { display: block; width: 100%; height: auto; }
+.footer-about a img { margin-right: 1rem; }
+.footer-descr { width: 266px; font-weight: 400; font-size: 16px; color: #616161; }
+.footer-menu a { width: 116px; }
+.footer-social-media .footer-title { width: 196px; }
+.footer-email form { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.footer-email input { width: 210px; background: #F4F5F7; border: none; padding-left: 0.5rem; }
+.footer-email button { background: none; border: none; cursor: pointer; }
+.footer-email button:hover { opacity: 0.8; }
+.footer ul { list-style-type: none; margin-left: -35px; }
 
-.header { padding-top: 2.5rem; background: url(../img/promo/bg.jpg) center center/cover no-repeat; }
+.header { padding-top: 2.5rem; background: url(../img/promo/bg.jpg) center center/cover no-repeat; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 .header .container { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
-.header_logo { font-weight: 700; font-size: 1.5rem; width: 5%; }
-.header_menu { width: 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; vertical-align: center; }
-.header_menu a { font-size: 1rem; color: #3A3A3A; text-decoration: none; margin-right: 0.3rem; display: -webkit-box; display: -ms-flexbox; display: flex; }
-.header_menu a img { margin-left: 0.5rem; }
-.header_searchbar { width: 40%; }
+.header_logo { font-weight: 700; font-size: 1.5rem; width: 5%; text-decoration: none; color: #333; -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; }
+.header_menu { width: 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; vertical-align: center; list-style-type: none; }
+.header_menu a { font-size: 1rem; color: #3A3A3A; text-decoration: none; margin-right: 0.3rem; }
+.header_searchbar { width: 40%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.header_searchbar form { width: 100%; }
 .header_searchbar form .search { height: 2.3rem; width: 90%; font-size: 1rem; padding-left: 2.5rem; padding: auto; border: none; }
 .header_icons { width: 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 .header_icons img { width: 1.5rem; height: 1.5rem; }
+
+.menu-item { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.menu-item img { display: none; }
+.menu-item:hover .menu-icon { display: block; }
 
 body { font-family: "Poppins", sans-serif; }
 
