--- a/src/sass/blocks/_features.sass
+++ b/src/sass/blocks/_features.sass
@@ -8,12 +8,12 @@
         display: flex
         justify-content: space-between
         align-items: center
-        &_img
+        &-img
             width: 5.3rem
             height: 5.3rem
             display: flex
             align-items: center
-        &_text
+        &-text
             h3
                 font-weight: 600
                 font-size: 1.2rem
