--- a/src/sass/blocks/_inspiration.sass
+++ b/src/sass/blocks/_inspiration.sass
@@ -8,7 +8,7 @@
         margin-left: 0
         right: -15%
         transform: translateY(-170%)
-    &_more
+    &-more
         width: 176px
         height: 48px
         background-color: $main-color
@@ -28,38 +28,35 @@
         margin-left: 40%
         width: 55%
         position: relative
-        &_slide
-            width: 370px
-            height: auto
-        .s1
-            transform: translateX(-260px)
-            // transition: 1s ease-in-out
-    &_info
-        // position: relative
+    &-slide
+        width: 370px
+        height: auto
+    .s1
+        transform: translateX(-260px)
+    &-info
         width: 180px
         height: 70px
         background: rgba(255, 255, 255, 0.72)
         backdrop-filter: blur(15px)
-        // z-index: 2
         padding: 32px 32px 32px 32px
-        &-wrapper
-            display: flex
-            position: relative
-            z-index: 2
-            right: -43%
-            transform: translateY(-360%)
-            align-items: flex-end
-            width: 300px
-        &-name
-            font-weight: 600
-            font-size: 1.7rem
-            color: #3A3A3A
-            line-height: 0.5rem
-        &-descr
-            font-weight: 500
-            font-size: 1rem
-            color: #616161
-            line-height: 0.5rem
+    .info-wrapper
+        display: flex
+        position: relative
+        z-index: 2
+        right: -43%
+        transform: translateY(-390%)
+        align-items: flex-end
+        width: 300px
+    .info-name
+        font-weight: 600
+        font-size: 1.7rem
+        color: #3A3A3A
+        line-height: 0.5rem
+    .info-descr
+        font-weight: 500
+        font-size: 1rem
+        color: #616161
+        line-height: 0.5rem
     .slick-slide
         padding: 0 10px 0 10px
     .slick-next, .slick-prev
@@ -75,9 +72,9 @@
             height: 48px
     .slick-dots
         transform: translateX(230%)
-        top: 90%
+        top: 97%
 
-.title_left
+.inspiration-title
     margin-left: 0
     text-align: left
     margin-bottom: 0
