--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -11,34 +11,34 @@
         padding: 50px 50px 50px 50px
         background: rgba(255, 255, 255, 0.72)
         backdrop-filter: blur(10px)
-        &_header
-            font-weight: 800
-            font-size: 2.8rem
-            color: #3A3A3A
-            line-height: 4rem
-            margin: 0
-        &_descr
-            font-weight: 500
-            font-size: 1.2rem
-            color: #898989
-            margin-top: 1rem
-        &_button
-            display: flex
-            justify-content: center
-            align-items: center
-            width: 360px
-            height: 78px
-            background-color: $main-color
-            border: none
-            font-weight: 600
-            font-size: 1.3rem
-            color: #FFFFFF
-            margin-top: 50px
-            text-decoration: none
-            cursor: pointer
-            &:hover
-                background-color: #df8751
-                transition: 0.2s ease-in-out
+    &-header
+        font-weight: 800
+        font-size: 2.8rem
+        color: #3A3A3A
+        line-height: 4rem
+        margin: 0
+    &-descr
+        font-weight: 500
+        font-size: 1.2rem
+        color: #898989
+        margin-top: 1rem
+    &-button
+        display: flex
+        justify-content: center
+        align-items: center
+        width: 360px
+        height: 78px
+        background-color: $main-color
+        border: none
+        font-weight: 600
+        font-size: 1.3rem
+        color: #FFFFFF
+        margin-top: 50px
+        text-decoration: none
+        cursor: pointer
+        &:hover
+            background-color: #df8751
+            transition: 0.2s ease-in-out
     &_slider
         height: 550px
     &_info
@@ -51,36 +51,35 @@
         padding: 10px 0 10px 24px
         right: -67%
         transform: translateY(-130%)
-        &-name
-            font-weight: 600
-            font-size: 1.7rem
-            color: #3A3A3A
-            line-height: 0.5rem
-        &-descr
-            font-weight: 500
-            font-size: 1rem
-            color: #616161
-            line-height: 0.5rem
-        &-prise
-            font-weight: 700
-            font-size: 1.3rem
-            &-arrow
-                display: flex
-                justify-content: space-between
-                align-items: center
-                margin-top: 1.3rem
+    .info-name
+        font-weight: 600
+        font-size: 1.7rem
+        color: #3A3A3A
+        line-height: 0.5rem
+    .info-descr
+        font-weight: 500
+        font-size: 1rem
+        color: #616161
+        line-height: 0.5rem
+    .info-prise
+        font-weight: 700
+        font-size: 1.3rem
         &-arrow
-            width: 20%
+            display: flex
+            justify-content: space-between
+            align-items: center
+            margin-top: 1.3rem
+    .info-arrow
+        width: 20%
     &_carousel
         position: relative
         width: 100%
-        // height: 550px
         margin: 0 auto
         margin-top: 180px
-        &_slide
-            height: 550px
-            width: 930px
-            margin: 0 auto
+    &-slide
+        height: 550px
+        width: 930px
+        margin: 0 auto
     .s1
         transform: translateX(160px)
 
