--- a/src/sass/blocks/_share.sass
+++ b/src/sass/blocks/_share.sass
@@ -9,41 +9,41 @@
         display: grid
         grid-template-columns: 45% 20% 35%
         grid-template-rows: 420px 420px
-    &_box
+    &-box
         margin: 10px
         display: flex
-        &_2
+        &-2
             grid-row-start: span 2
             display: grid
             align-items: center
             img
                 width: 100%
                 height: auto
-    &_img
-        &_1
+    &-img
+        &-1
             width: 30%
             height: 100%
-        &_2
+        &-2
             width: 67%
             height: 90%
             margin-left: 3%
             margin-top: 5%
-        &_9
+        &-9
             width: 40%
-        &_5
+        &-5
             width: 65%
             margin-right: 3%
-        &_6
+        &-6
             height: 80%
             width: 32%
-        &_8
+        &-8
             width: 60%
             height: 70%
-        &_7
+        &-7
             width: 37%
             height: 90%
             margin-right: 3%
-        &_4
+        &-4
             width: 57%
             height: 70%
             margin-top: 21%
