--- a/src/sass/blocks/_features.sass
+++ b/src/sass/blocks/_features.sass
@@ -1,27 +1,48 @@
 .features
+    padding-top: 50px
+    @include maxw($mob)
+        padding-top: 80px
+
+    .title
+        display: none
+        @include maxw($mob)
+            display: block
     &__wrapper
         display: flex
         justify-content: space-between
         align-items: center
-        margin-top: 5.6rem
+        @include adaptiv-value("margin-top", 90, 30, 0)
+        flex-wrap: wrap
+        @include maxw($mob)
+            justify-content: center
+
     &_block
         display: flex
-        justify-content: space-between
+        // justify-content: space-between
         align-items: center
-        &-img
-            width: 5.3rem
-            height: 5.3rem
-            display: flex
-            align-items: center
-        &-text
-            h3
-                font-weight: 600
-                font-size: 1.2rem
-                color: #3A3A3A
-                line-height: 0.3rem
-                display: block
-            p
-                font-weight: 500
-                font-size: 1rem
-                color: #898989
-                display: block
+        @include adaptiv-value("width", 270, 200, 0)
+        background-color: #fff
+        @include maxw($mob)
+            margin-bottom: 20px
+            box-shadow: 0px 5px 20px 2px #dedede
+            width: 220px
+            padding: 15px
+            &:last-child
+                margin-bottom: 0px
+    &_img
+        @include adaptiv-value("width", 40, 25, 0)
+        @include adaptiv-value("height", 40, 25, 0)
+        display: flex
+        align-items: center
+        margin-right: 20px
+        img
+            width: 100%
+            height: auto
+    &_text
+        h4
+            display: block
+        p
+            font-weight: 500
+            @include adaptiv-font(16, 12)
+            color: #898989
+            display: block
