--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,7 @@
 @import 'base/variables'
+@import 'base/mixins'
+@import 'base/typography'
+@import 'base/buttons'
 @import 'blocks/promo'
 @import 'blocks/features'
 @import 'blocks/products'
@@ -10,7 +13,24 @@
 
 body
     font-family: 'Poppins', sans-serif
+    margin: 0
+    padding: 0
+    border: none
 
 .container
-    width: 1240px
-    margin: auto
+    margin: 0 auto
+    padding: 0 1rem
+    @include maxw($mob)
+        padding: 0 1rem
+    @include minw($mob)
+        padding: 0 2rem
+    @include minw($sm-tablet)
+        padding: 0 3rem
+    @include minw($tablet)
+        padding: 0 4rem
+    @include minw($sm-pc)
+        padding: 0 6rem
+    @include minw($pc)
+        padding: 0 8rem
+    @include minw($lg)
+        max-width: 100rem
