--- a/src/sass/base/_variables.sass
+++ b/src/sass/base/_variables.sass
@@ -1,3 +1,17 @@
+$full-hd: 1900px
+$lg: 1440px
+$pc: 1280px
+$sm-pc: 1024px
+$tablet: 968px
+$sm-tablet: 768px
+$lg-mob: 600px
+$mob: 480px
+$i5: 320px
+
+$maxWidth: 1280
+$maxWidthScreen: 1920
+$maxWidthContainer: 1170
+
 $main-color: #E89F71
 $white-color: #fff
 $text-color: #3A3A3A
