--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -1,46 +1,55 @@
 .footer
-    padding-bottom: 60px
+    padding-bottom: 50px
     &_wrapper
         display: flex
+        justify-content: space-between
         width: 100%
-        margin: 0 -35px
+        flex-wrap: wrap-reverse
+        @include maxw($lg-mob)
+            justify-content: start
         a
-            font-size: 16px
+            @include adaptiv-font(16, 12)
             color: #616161
             text-decoration: none
-            margin-top: 1rem
+            @include adaptiv-value("margin-top", 16, 5, 0)
             display: block
             &:hover
                 color: $main-color
     &-item
-        margin: 0 35px
+        margin-right: 30px
+        &:last-child
+            margin-right: 0
+        @include maxw($lg-mob)
+            margin-right: 20px
+
     &-title
-        margin-top: 80px
+        @include adaptiv-value("margin-top", 80, 30, 0)
         font-weight: 700
-        font-size: 1.5rem
         color: #000
-        width: 100%
     &-about
         display: block
-        width: 100%
+        width: 25%
         height: auto
+        @include maxw($lg-mob)
+            width: 80%
+
         a
             img
                 margin-right: 1rem
     &-descr
-        width: 266px
         font-weight: 400
-        font-size: 16px
+        @include adaptiv-font(16, 12)
         color: #616161
-    &-menu
-        a
-            width: 116px
-    &-social-media
-        .footer-title
-            width: 196px
+        @include maxw($lg-mob)
+            width: 80%
+        @include maxw($mob)
+            width: 100%
     &-email
         form
             display: flex
+            @include adaptiv-value("height", 50, 40, 0)
+            @include adaptiv-value("margin-top", 20, 10, 0)
+
         input
             width: 210px
             background: #F4F5F7
@@ -50,8 +59,12 @@
             background: none
             border: none
             cursor: pointer
+            img
+                height: 100%
+                width: auto
             &:hover
                 opacity: 0.8
     ul
         list-style-type: none
-        margin-left: -35px
+        margin-left: -38px
+        margin-bottom: 0
