--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,27 +1,41 @@
 .header
-    padding-top: 2.5rem
-    background: url(../img/promo/bg.jpg) center center/cover no-repeat
+    padding-top: 1.5rem
+    background-color: rgba(0, 0, 0, 0)
     align-items: center
+    top: 0
+    left: 0
+    width: 100%
+    position: absolute
+
     .container
         display: flex
         justify-content: space-between
+        align-items: center
+        @include maxw($lg-mob)
+            flex-wrap: wrap
     &_logo
         font-weight: 700
-        font-size: 1.5rem
+        @include adaptiv-font(24, 16)
         width: 5%
         text-decoration: none
         color: #333
         align-items: center
         display: flex
-    &_menu
-        width: 25%
+        @include maxw($lg-mob)
+            width: 25%
+            order: -2
+            margin-bottom: 20px
+
+    &__menu
+        width: 30%
+    &__menu-list
         display: flex
         justify-content: space-between
         align-items: center
         vertical-align: center
         list-style-type: none
         a
-            font-size: 1rem
+            @include adaptiv-font(16, 10)
             color: #3A3A3A
             text-decoration: none
             margin-right: 0.3rem
@@ -29,12 +43,15 @@
         width: 40%
         display: flex
         align-items: center
+        @include maxw($lg-mob)
+            width: 70%
+
         form
             width: 100%
             .search
-                height: 2.3rem
+                @include adaptiv-value("height", 40, 35, 0)
                 width: 90%
-                font-size: 1rem
+                @include adaptiv-font(16, 12)
                 padding-left: 2.5rem
                 padding: auto
                 border: none
@@ -43,9 +60,88 @@
         display: flex
         justify-content: space-between
         align-items: center
+        order: 99
+        @include maxw($tablet)
+            width: 15%
+        @include maxw($lg-mob)
+            width: 20%
+            order: -1
+            margin-bottom: 20px
+        @include maxw($mob)
+            width: 80px
+
         img
-            width: 1.5rem
-            height: 1.5rem
+            @include adaptiv-value("width", 24, 17, 0)
+            @include adaptiv-value("height", 24, 17, 0)
+
+    &__burger
+        display: none
+        order: 999
+        @include maxw($tablet)
+            display: block
+            position: relative
+            width: 30px
+            height: 20px
+            order: 999
+        @include maxw($mob)
+            width: 20px
+            height: 16px
+
+    &__burger
+        span
+            position: absolute
+            background-color: #3A3A3A
+            left: 0
+            width: 100%
+            height: 2px
+            top: 9px
+            z-index: 5
+            @include maxw($mob)
+                top: 7px
+
+    &__burger:before,
+    &__burger:after
+        content: ""
+        background-color: #3A3A3A
+        position: absolute
+        width: 100%
+        height: 2px
+        left: 0
+        z-index: 5
+    &__burger:before
+        top: 0
+    &__burger:after
+        bottom: 0
+    &__burger.active:before
+        transform: rotate(45deg)
+        top: 9px
+        @include maxw($mob)
+            top: 7px
+    &__burger.active:after
+        transform: rotate(-45deg)
+        bottom: 9px
+        @include maxw($mob)
+            top: 7px
+    &__burger.active span
+        transform: scale(0)
+
+    &__menu
+        @include maxw($tablet)
+            position: fixed
+            top: 0
+            left: 0
+            width: 100%
+            height: 100%
+            background-color: #777F96
+            z-index: 2
+            display: none
+    &__menu.active
+        top: 0
+        display: block
+
+body.lock
+    overflow: hidden
+
 .menu-item
     display: flex
     img
