--- a/src/sass/blocks/_promo.sass
+++ b/src/sass/blocks/_promo.sass
@@ -1,119 +1,127 @@
 .promo
-    padding-top: 0.5rem
-    height: auto
+    padding-top: 180px
     background: url(../img/promo/bg.jpg) center center/cover no-repeat
+    background-position: 68% 0%
+
     &_offer
         position: absolute
-        margin-top: 100px
         z-index: 2
-        width: 360px
-        height: 430px
-        padding: 50px 50px 50px 50px
+        @include adaptiv-value("width", 380, 250, 0)
+        @include adaptiv-value("height", 470, 300, 0)
+        @include adaptiv-value("padding", 50, 20, 0)
         background: rgba(255, 255, 255, 0.72)
         backdrop-filter: blur(10px)
-    &-header
-        font-weight: 800
-        font-size: 2.8rem
-        color: #3A3A3A
-        line-height: 4rem
-        margin: 0
+        @include maxw($sm-tablet)
+            position: relative
+            margin: 0 auto
+
     &-descr
         font-weight: 500
-        font-size: 1.2rem
+        @include adaptiv-font(18, 13)
         color: #898989
         margin-top: 1rem
     &-button
         display: flex
         justify-content: center
         align-items: center
-        width: 360px
-        height: 78px
-        background-color: $main-color
-        border: none
-        font-weight: 600
-        font-size: 1.3rem
-        color: #FFFFFF
-        margin-top: 50px
-        text-decoration: none
-        cursor: pointer
-        &:hover
-            background-color: #df8751
-            transition: 0.2s ease-in-out
+        width: 100%
+        @include adaptiv-value("height", 78, 40, 0)
+        @include adaptiv-font(20, 12)
+        @include adaptiv-value("margin-top", 50, 20, 0)
     &_slider
-        height: 550px
+        margin-top: 180px
+        @include adaptiv-value("height", 550, 190, 0)
+        @include maxw($sm-tablet)
+            margin-top: 50px
+
     &_info
         position: relative
-        width: 270px
-        height: 125px
+        @include adaptiv-value("width", 240, 100, 0)
+        @include adaptiv-value("height", 100, 50, 0)
         background: rgba(255, 255, 255, 0.72)
         backdrop-filter: blur(15px)
         z-index: 2
-        padding: 10px 0 10px 24px
-        right: -67%
-        transform: translateY(-130%)
-    .info-name
-        font-weight: 600
-        font-size: 1.7rem
-        color: #3A3A3A
-        line-height: 0.5rem
-    .info-descr
-        font-weight: 500
-        font-size: 1rem
+        @include adaptiv-value("padding", 24, 10, 0)
+        right: -65%
+        transform: translateY(-120%)
+        @include maxw($tablet)
+            right: -75%
+        @include maxw($sm-tablet)
+            transform: translateY(-190%)
+            right: -55%
+
+    h3
+        @include adaptiv-font(20, 12)
+
+    p
+        @include adaptiv-font(12, 8)
         color: #616161
-        line-height: 0.5rem
+        line-height: 0px
     .info-prise
         font-weight: 700
-        font-size: 1.3rem
+        color: $text-color
+        @include adaptiv-font(14, 10)
+        margin: 0
         &-arrow
             display: flex
             justify-content: space-between
             align-items: center
-            margin-top: 1.3rem
+            @include adaptiv-value("margin-top", 20, 0, 0)
     .info-arrow
         width: 20%
+        img
+            width: 100%
     &_carousel
         position: relative
         width: 100%
         margin: 0 auto
-        margin-top: 180px
     &-slide
-        height: 550px
-        width: 930px
+        // height: 550px
+        height: 100%
+        width: 100%
         margin: 0 auto
     .s1
         transform: translateX(160px)
+        @include maxw($sm-tablet)
+            transform: translateX(0px)
+
+    .slick-slide
+        @include adaptiv-value("height", 550, 190, 0)
+        @include adaptiv-value("width", 930, 290, 0)
 
 .slick-slide
     padding: 0 20px 0 20px
 
 .slick-prev, .slick-next
     position: absolute
-    top: -70px
-    left: 210px
-    transform: translateY(100%)
-    transform: translateX(2000%)
-    // right: 200px
     border: none
     background: none
     cursor: pointer
+    top: -20%
+    left: 90%
     img
         width: 48px
         height: 48px
     &:hover
         opacity: 0.8
 .slick-prev
-    transform: translateX(1900%)
+    left: calc(90% - 70px)
 
 .slick-dots
     list-style-type: none
     display: flex
     justify-content: center
-    width: 120px
     position: absolute
-    left: 0
-    top: -80px
-    transform: translateY(100%)
-    transform: translateX(450%)
+    top: -20%
+    // padding-left: 0
+    left: 50%
+    padding-inline-start: 0px !important
+    @include maxw($sm-tablet)
+        width: 100%
+        top: 110%
+        left: calc( 50% - 55px )
+        position: static
+
     button
         font-size: 0px
         position: static
@@ -126,6 +134,7 @@
         border: none
         margin: 0px 10px
         cursor: pointer
+
         &:hover
             background: $main-color
 .slick-active
