--- a/src/sass/blocks/_tips.sass
+++ b/src/sass/blocks/_tips.sass
@@ -1,29 +1,32 @@
 .tips
-    // background-color: $main-color
+    @include adaptiv-value("padding-top", 50, 20, 0)
+    @include adaptiv-value("padding-bottom", 50, 20, 0)
     &_carousel
         width: 100%
         position: relative
-        margin-bottom: 4rem
     &-slide
-        width: 390px
-        height: 250px
+        height: 60%
+        width: 100%
     &-title
         display: block
-        background-color: #fff
-        padding: 1px 0 0 0
+        background-color: #FFF
+        @include adaptiv-value("padding", 15, 10, 0)
+
         h3
-            margin-left: 0.8rem
             font-weight: 600
-            font-size: 1.3rem
+            @include adaptiv-font(18, 12)
             color: $text-color
-            line-height: 28px
             span
                 font-weight: 400
-                font-size: 14px
+                @include adaptiv-font(14, 8)
                 color: #898989
-    .s1
-        &:hover
-            box-shadow: 10px 28px rgba(0,0,0,0.1), 0 10px 10px rgba(0,0,0,0.22)
+    .slick-slide
+        @include adaptiv-value("height", 410, 280, 0)
+        @include adaptiv-value("width", 380, 270, 0)
+
     .slick-dots
-        transform: translateX(320%)
         top: 100%
+        left: calc( 50% - 80px )
+
+    &-title.active
+        box-shadow: 0px 10px 20px 0px #dedede
