--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -32,13 +32,28 @@
         display: flex
         justify-content: space-between
         align-items: center
-        vertical-align: center
         list-style-type: none
+        li
+            img
+                cursor: pointer
+        @include maxw($tablet)
+            display: block
+            position: absolute
+            left: 50%
+            top: 50%
+            transform: translate(-50%, -50%)
+            padding: 0
+            li
+                margin-bottom: 10px
+
         a
             @include adaptiv-font(16, 10)
             color: #3A3A3A
             text-decoration: none
             margin-right: 0.3rem
+            @include maxw($tablet)
+                @include adaptiv-font(20, 16)
+
     &_searchbar
         width: 40%
         display: flex
@@ -132,8 +147,8 @@
             left: 0
             width: 100%
             height: 100%
-            background-color: #777F96
-            z-index: 2
+            background-color: #FCF8F3
+            z-index: 3
             display: none
     &__menu.active
         top: 0
